--- a/01_minimal/pom.xml
+++ b/01_minimal/pom.xml
@@ -6,5 +6,6 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>simple-example</name>
-  <url>http://maven.apache.org</url>
+  <description></decription>
+  <url>http://maven.training/</url>
 </project>
