--- a/02_simple/pom.xml
+++ b/02_simple/pom.xml
@@ -1,11 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>training.maven.simple</groupId>
+  <groupId>training.maven.quick</groupId>
   <artifactId>simple-example</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>simple-example</name>
-  <description></decription>
+  <version>1.0</version>
+  <name>Simple Example</name>
+  <description>
+	This project is a simple example Maven project designed
+	to work with Java applications packaged into a JAR file.
+  </decription>
   <url>http://maven.training/</url>
 </project>
